fix: Adds in appropriate spacing post `text " "` removal
I've added one `text " "` back that actually makes sense since it is
a space in an actual paragraph of text. And removed a text " " that was
spacing some buttons.

Mostly was just a css fix for spacing buttons nicely on a modal footer.

--- a/backend/sass/common.blocks/_modal.scss
+++ b/backend/sass/common.blocks/_modal.scss
@@ -137,8 +137,12 @@
   margin-right: $small-margin;
 }
 
-.modal__foter > *:last-child {
-  margin-left: 0;
+.modal__footer > .button {
+  margin-right: $normal-margin;
+}
+
+.modal__footer > *:last-child {
+  margin-right: 0;
 }
 
 .detail {
